--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "webpack-dev-server": "^3.11.2"
   },
   "dependencies": {
+    "core-js": "^3.9.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
   }
